--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,6 +28,7 @@ jobs:
           go-version-file: 'go.mod'
           cache: true
       - run: go mod download
+      - run: go mod tidy
       - run: go build -v .
   #      - name: Run linters
   #        uses: golangci/golangci-lint-action@3cfe3a4abbb849e10058ce4af15d205b6da42804 # v4.0.0
