chore: fix linter

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -25,3 +25,16 @@ linters:
     - unparam
     - unused
     - vet
+    - goconst
+    - gochecknoinits
+    - dupl
+    - asasalint
+    - bodyclose
+    - contextcheck
+    - cyclop
+    - errchkjson
+    - exportloopref
+    - errorlint
+    - exhaustive
+    - funlen
+    - zerologlint
