--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,3 +49,7 @@ jobs:
           B2C_ARM_CLIENT_ID: ${{ secrets.B2C_ARM_CLIENT_ID }}
           B2C_ARM_CLIENT_SECRET: ${{ secrets.B2C_ARM_CLIENT_SECRET }}
         run: go test -v -cover ./...
+      - name: Go Coverage Badge
+        uses: tj-actions/coverage-badge-go@v2.4.2
+        with:
+          filename: coverage.out
