--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,7 +48,9 @@ jobs:
           B2C_ARM_TENANT_ID: ${{ secrets.B2C_ARM_TENANT_ID }}
           B2C_ARM_CLIENT_ID: ${{ secrets.B2C_ARM_CLIENT_ID }}
           B2C_ARM_CLIENT_SECRET: ${{ secrets.B2C_ARM_CLIENT_SECRET }}
-        run: go test -v -cover ./...
+        run: |
+          go test -v ./... -covermode=count -coverprofile=coverage.out
+          go tool cover -func=coverage.out -o=coverage.out
       - name: Go Coverage Badge
         uses: tj-actions/coverage-badge-go@v2.4.2
         with:
