--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,4 +55,4 @@ jobs:
         uses: tj-actions/coverage-badge-go@v2.4.2
         with:
           filename: coverage.out
-        run: cat README.md
+      - run: cat README.md
