--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,13 +2,11 @@ name: Tests
 
 on:
   pull_request:
-  push:
-    branches:
-      - main
 
 permissions:
   contents: read
   checks: write
+  pull-requests: write
 
 jobs:
   golangci:
